02 April 2020 Petasis George <petasis@iit.demokritos.gr>
 * frontend/clarin/css/clarin.css:
 * frontend/clarin/js/app.js:
 * frontend/clarin/js/config/ocLazyLoadConfig.js:
 * frontend/clarin/js/controllers/annotationCtrl.js:
 * frontend/clarin/js/controllers/modals/renameCollectionModalCtrl.js:
 * frontend/clarin/js/directives/annotator-widget.js:
 * frontend/clarin/js/directives/dom-helpers.js:
 * frontend/clarin/js/directives/found-in-collection.js:
 * frontend/clarin/js/directives/text-widget.js:
 * frontend/clarin/js/directives/toolbar-widget.js:
 * frontend/clarin/js/services/text-widget-api.js:
 * frontend/clarin/templates/annotation.html:
 * frontend/clarin/templates/directives/toolbar.html:
 * frontend/clarin/templates/modals/rename-collection-modal.html: Added
 support for custom values in Button Annotator.

28 March 2020 Petasis George <petasis@iit.demokritos.gr>
 * frontend/clarin/js/directives/document/annotation-text-text.js:
 * frontend/clarin/js/directives/dom-helpers.js:
 * frontend/clarin/js/directives/text-widget.js: Added initialisation of
 Document Attributes, if relevant annotations exist.
:
27 March 2020 Petasis George <petasis@iit.demokritos.gr>
 * backend/clarin/app/Http/Controllers/AnnotationController.php:
 * backend/clarin/app/Http/Controllers/TempAnnotationController.php:
 * frontend/clarin/js/directives/annotation-visualizer.js:
 * frontend/clarin/js/directives/document/annotation-text-text.js:
 * frontend/clarin/js/directives/text-widget.js:
 * frontend/clarin/js/services/restoreAnnotationService.js:
 * frontend/clarin/js/services/text-widget-api.js:
 * frontend/clarin/templates/directives/annotation-visualizer.html: Added
 support for a new type of Annotation, Document Attributes. Currently
 available only for Button Annotator schemas. A sample schema can be:
 <group type="document_attributes" name="Document Metadata" button_number="1"
 sort="false"><value type="paragraph" name="author">Author</value></group>.
